<resources>
    <string name="app_name">Layouts</string>
    <string name="choose_food">Выберите еду</string>
    <string name="takeaway">С собой?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="food_vopper">Воппер</string>
    <string name="food_potatos">Картошка фри</string>
    <string name="food_drink">Пепси / Фанта / Спрайт</string>
    <string name="food_souce">Соус</string>
    <string name="food_desert">Десерт</string>
    <string name="enter">ENTER</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="know_more">KNOW MORE</string>
    <string name="title_text">обработка файлов</string>
    <string name="description_text"><![CDATA[cat (от англ. concatenate) — утилита UNIX, выводящая последовательно указанные файлы (или устройства), таким образом, объединяя их в единый поток. Если вместо имени файла указывается «-», то читается стандартный ввод. Иногда (в учебных примерах) используется в качестве первой ступени конвейера обработки текста утилитами sed, awk и так далее, хотя в большинстве случаев её можно заменить оператором \'<\' либо передачей имени файла в качестве аргумента, что позволяет избежать создания отдельного процесса.]]></string>
</resources>
