<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ru.verkhoumov.layouts.FoodChoose">

    <TextView
        android:id="@+id/choose_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_food"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/takeaway"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/takeaway"
        android:layout_alignTop="@+id/choose_food"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp" />

    <ToggleButton
        android:id="@+id/toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/yes"
        android:textOff="@string/no"
        android:layout_alignStart="@+id/takeaway"
        android:layout_alignBaseline="@+id/takeaway"
        android:layout_marginStart="150dp" />

    <CheckBox
        android:id="@+id/checkboxVopper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/food_vopper"
        android:layout_alignTop="@+id/takeaway"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp" />

    <CheckBox
        android:id="@+id/checkboxPotatos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/food_potatos"
        android:layout_alignTop="@+id/checkboxVopper"
        android:layout_alignStart="@+id/checkboxVopper"
        android:layout_marginTop="30dp" />

    <CheckBox
        android:id="@+id/checkboxDrink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/food_drink"
        android:layout_alignTop="@+id/checkboxPotatos"
        android:layout_alignStart="@+id/checkboxVopper"
        android:layout_marginTop="30dp" />

    <CheckBox
        android:id="@+id/checkboxSouce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/food_souce"
        android:layout_alignTop="@+id/checkboxDrink"
        android:layout_alignStart="@+id/checkboxVopper"
        android:layout_marginTop="30dp" />

    <CheckBox
        android:id="@+id/checkboxDesert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/food_desert"
        android:layout_alignTop="@+id/checkboxSouce"
        android:layout_alignStart="@+id/checkboxVopper"
        android:layout_marginTop="30dp" />
</RelativeLayout>