<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ru.verkhoumov.layouts.RelativeLayout">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/firstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:layout_alignTop="@+id/button"
        android:layout_alignParentStart="true"
        android:layout_marginTop="80dp" />

    <EditText
        android:id="@+id/editFirstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/firstname"
        android:layout_alignBaseline="@+id/firstname"
        android:layout_marginStart="80dp"
        android:width="120dp" />

    <TextView
        android:id="@+id/lastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        android:layout_alignTop="@+id/firstname"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp" />

    <EditText
        android:id="@+id/editLastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/lastname"
        android:layout_alignBaseline="@+id/lastname"
        android:layout_marginStart="80dp"
        android:width="120dp" />
</RelativeLayout>
